--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -2,7 +2,7 @@ name: CICD Pipeline
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
 
 jobs:
   compile:
@@ -87,13 +87,6 @@ jobs:
         args: >
           -Dsonar.organization=techaksh63           
           -Dsonar.projectKey=techaksh63_Github-Action-Project            
-
-    - name: SonarCloud Quality Gate Check
-      uses: SonarSource/sonarcloud-quality-gate-action@v1
-      with:
-        scanMetadataReportFile: .scannerwork/report-task.txt
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   build_docker_image_and_push:
     runs-on: ubuntu-latest
